create user info routes
