# server/api/controllers/chef/routes.js
@@ -4,6 +4,7 @@ import controller from './controller';
 
 export default express
   .Router()
+  .get('/', controller.getAllChefDetails)
   .put('/updateProfilePicture', authHandler, controller.updateProfilePicture)
   .put('/updateProfileData', authHandler, controller.updateProfileData)
   .post('/menuItems', authHandler, controller.createMenuItem)
